# lobxp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  README.md  pyproject.toml  spack.yaml
.github/workflows/: .deploy-book.yml  cpp-tests.yml
bindings/: py_kalman.cpp
book/: book.toml
book/src/: SUMMARY.md  introduction.md  kalman_filter.md
include/: kalman_filter.hpp  kf_linear.hpp
src/lobxp/: kalman_filter.cpp  kf_linear.cpp
tests/: CMakeLists.txt  test_kalman_filter.cpp
