[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "lobxp"
version = "0.1.0"
description = "Kalman filter (C++/Eigen) with pybind11 bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brian Staber" }]
requires-python = ">=3.10"

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build"
sdist.include = ["include/**", "src/**", "bindings/**", "CMakeLists.txt", "README.md"]
